--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch": "tsc -w",
         "test": "jest",
         "start": "node dist/index.js",
-        "build": "tsc"
+        "build": "tsc",
+        "dev": "nodemon"
     },
     "keywords": [],
     "author": "",
