--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
             "./src/types"
         ],
         "lib": [
-            "ES2022",
+            "ES2015",
             "DOM"
-        ]
+        ],
+        "target": "ES2015"
     },
     "include": [
         "src/**/*.ts"
