--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/nodemailer": "^6.4.15",
+        "@types/supertest": "^6.0.2",
         "jest": "^29.7.0",
+        "mongodb-memory-server": "^10.0.0",
         "nodemon": "^3.1.4",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
